--- a/.andock/hooks/init_tasks.yml
+++ b/.andock/hooks/init_tasks.yml
@@ -1,3 +1,2 @@
-
-- name: "Please copy and paste the following SSH key to your git user. andock will use it to checkout your target git repository."
-  debug: msg="XXXX"
+- name: "echo 'Run init tasks'"
+  debug: msg="Initialize environment"
