--- a/.andock/andock.yml
+++ b/.andock/andock.yml
@@ -1,7 +1,7 @@
 # andock.yml (version: 0.0.1)
 
 ## The name of this application, which must be unique within a andock server.
-project_name: "demo-project"
+project_name: "test-project"
 project_id: "v1z2kdj"
 
 ## The virtual host configuration pattern.
@@ -11,7 +11,7 @@ virtual_hosts:
     container: web
 
 ## The git checkout repository.
-git_repository_path: https://github.com/andock/demo-project.git
+git_repository_path: https://github.com/andock/test-project.git
 
 ## Mounts describe writeable persistent filesystem mounts in the application.
 ## Mounts are linked via volumnes: into the docker environment.
